[package]
name = "mask_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mask_example"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
image = "0.24.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
